* Version 4.1.x  --  Stable Branch

Patchlevel 4

Released on ???


** Bug Fixes

- [Enblend] Fix a possible domain error followed by a division-by-zero
  in the seamline optimizer.

- [Enblend and Enfuse] Avoid an undeserved warning about incompatible
  colorspaces if they only disagree on their meta-data (e.g. profile
  creation date/time).

- [Enblend] Fix a bug in the Dijkstra Optimizer which could lead to
  undefined behavior in the placement of the (optimized) seam line.

- [Enblend] Fix a non-dereferencable vector iterator which led to a
  segfault.

- [Enblend] Avoid a division-by-zero in the Annealing Optimizer.

- [Enblend] Fix a bug (#1356551) in the seam-line vectorization code
  that was there since 2004.  The fix changes the position of almost
  any coarse-mask seam line vertex by one pixel.


Patchlevel 3

Released on March 19, 2014.


** Bug Fixes

- [Enblend only] Fix problem of multiple, almost-identical seamlines
  that produce inexplicable black areas in the output panorama.


** Package Maintainer Stuff

- Little CMS version 2.5 or later is now required to build.  Prior
  versions of LCMS sometimes produced output images that were lighter
  or darker than the input images.


Patchlevel 2

Released on October 7, 2013.

** Bug Fixes

- [Enblend and Enfuse] Fix a bug in the highlight-recovery that caused
  Enfuse to bail out with the uncaught exception
    "Minimizer1D::set_bracket: minimum not bracketed".
  This addresses LaunchPad Bug #1214004.

- [Enfuse] Clean up seemingly random, bright-colored pixels that
  sometimes show up when fusing images with high contrast and "large"
  color profiles.


Patchlevel 1

Released on February 15, 2013.

** Bug Fixes

- [Enblend only] Fix a race condition in the seam-line optimizer that
  can cause wrongly placed seams.

- [Enblend and Enfuse] Use a per-thread storage of all OpenMP
  Vigra-functors.  This avoids data races.

- [Enblend and Enfuse] The Boost implementation of the `Mersenne