@@ -2158,7 +2158,10 @@ int main(int argc, char** argv)
             }
             XYZProfile = cmsCreateXYZProfile();
 
-            InputToXYZTransform = cmsCreateTransform(InputProfile, TYPE_RGB_DBL,
+            const unsigned input_profile_type =
+                enblend::profileChannels(InputProfile) > 1 ? TYPE_RGB_DBL : TYPE_GRAY_DBL;
+
+            InputToXYZTransform = cmsCreateTransform(InputProfile, input_profile_type,
                                                      XYZProfile, TYPE_XYZ_DBL,
                                                      RENDERING_INTENT_FOR_BLENDING,
                                                      TRANSFORMATION_FLAGS_FOR_BLENDING);
@@ -2225,7 +2228,7 @@ int main(int argc, char** argv)
                 }
             }
             LabProfile = cmsCreateLab2Profile(&white_point);
-            InputToLabTransform = cmsCreateTransform(InputProfile, TYPE_RGB_DBL,
+            InputToLabTransform = cmsCreateTransform(InputProfile, input_profile_type,
                                                      LabProfile, TYPE_Lab_DBL,
                                                      RENDERING_INTENT_FOR_BLENDING,
                                                      TRANSFORMATION_FLAGS_FOR_BLENDING);
@@ -2238,7 +2241,7 @@ int main(int argc, char** argv)
                 exit(1);
             }
             LabToInputTransform = cmsCreateTransform(LabProfile, TYPE_Lab_DBL,
-                                                     InputProfile, TYPE_RGB_DBL,
+                                                     InputProfile, input_profile_type,
                                                      RENDERING_INTENT_FOR_BLENDING,
                                                      TRANSFORMATION_FLAGS_FOR_BLENDING);
             if (!LabToInputTransform) {
